--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,7 @@ author: Tanishka
 email: tanishka.kohli0@gmail.com
 theme: minima
 
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: > this is just a regular gitpage and i am learning how to make gitpage
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
