Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Tanishka Gitpage
 author: Tanishka
 email: tanishka.kohli0@gmail.com
-theme: minima
+theme: jekyll-theme-minimal
 
 description: > this is just a regular gitpage and i am learning how to make gitpage
 
