--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: Tanishka
 email: tanishka.kohli0@gmail.com
 theme: jekyll-theme-minimal
 
-description: > this is just a regular gitpage and i am learning how to make gitpage
+description: this is just a regular gitpage and i am learning how to make gitpage
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
