--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Tanishka\'s Blog Page
+title: Tanishka's Blog Page
 author: Tanishka Kohli
 email: tanishka.kohli0@gmail.com
 theme: jekyll-theme-minimal
